# piscine-rust

./: .gitignore  README.md
day00/ex00/: hello.rs
day00/ex01/: min.rs
day00/ex02/: collatz.rs  main.rs  print_bytes.rs  yes.rs
day00/ex03/: main.rs
day00/ex04/: Cargo.toml
day00/ex04/src/: main.rs  other.rs  overflow.rs
day00/ex05/src/: main.rs
day00/ex06/: Cargo.toml
day00/ex06/src/: main.rs
day00/ex07/src/: lib.rs  main.rs
day01/ex00/src/: lib.rs
day01/ex01/src/: lib.rs
day01/ex02/src/: lib.rs
day01/ex03/src/: lib.rs
day01/ex04/src/: lib.rs
day01/ex05/src/: lib.rs
day01/ex06/src/: lib.rs
day01/ex07/: Cargo.toml
day01/ex07/src/: main.rs
day02/ex00/src/: main.rs
day02/ex01/src/: lib.rs
day02/ex02/src/: lib.rs
day02/ex03/src/: main.rs
day02/ex04/: Cargo.toml
day02/ex04/src/: main.rs
day02/ex05/src/: lib.rs
module-00/ex00/: hello.rs
module-00/ex01/: min.rs
module-00/ex02/: collatz.rs  print_bytes.rs  yes.rs
module-00/ex03/: fizzbuzz.rs
module-00/ex04/: Cargo.toml
module-00/ex04/src/: other.rs  overflow.rs
module-00/ex05/src/: main.rs
module-00/ex06/: Cargo.toml
module-00/ex06/src/: main.rs
module-00/ex07/src/: lib.rs  main.rs
module-01/ex00/src/: lib.rs
module-01/ex01/src/: lib.rs
module-01/ex02/src/: lib.rs
module-01/ex03/src/: lib.rs
module-01/ex04/src/: lib.rs
module-01/ex05/src/: lib.rs
module-01/ex06/src/: lib.rs
module-01/ex07/: Cargo.toml
module-01/ex07/src/: main.rs
module-02/ex07/: Cargo.toml
module-03/ex00/: Cargo.toml
module-04/ex01/: Cargo.toml
(+31 files in other folders)
