[package]
name = "module00-ex04"
version = "0.1.0"
edition = "2021"
authors = ["loumouli"]
description = "my answer to the fifth exercise of the first module of 42's Rust Piscine"
publish = false

[[bin]]
path = "/home/louis/rust/piscine-rust/day00/ex04/src/other.rs"
name = "other"

[[bin]]
path = "/home/louis/rust/piscine-rust/day00/ex04/src/overflow.rs"
name = "test-overflows"

[profile.release]
debug = false
strip = true

[profile.no-overflows]
inherits = "dev"
overflow-checks = false
